[gd_scene load_steps=5 format=3 uid="uid://bvbmetiiixwrv"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ihot3"]
[ext_resource type="Texture2D" uid="uid://bxyre6mhu8fqu" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/1.png" id="1_sdw64"]
[ext_resource type="Texture2D" uid="uid://cl1xhfxujvheb" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/2.png" id="2_x3xla"]
[ext_resource type="Texture2D" uid="uid://bhklupxuxqlpa" path="res://Assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 1/4.png" id="3_l10bu"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ihot3")

[node name="Titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.5
offset_top = 44.0
offset_right = 118.5
offset_bottom = 86.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "BALLOON GAME"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Jugar" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Jugar
"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Skins"

[node name="Salir" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir
"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
texture_repeat = 3
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(159.75, 200)
scale = Vector2(0.556424, 1.23148)
texture = ExtResource("1_sdw64")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
texture_filter = 2
texture_repeat = 2
motion_mirroring = Vector2(315, 0)

[node name="2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
position = Vector2(159.5, 275)
scale = Vector2(0.557292, 0.771605)
texture = ExtResource("2_x3xla")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
position = Vector2(160, 294)
scale = Vector2(0.555556, 0.648148)
texture = ExtResource("3_l10bu")

[connection signal="pressed" from="VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Salir" to="." method="_on_salir_pressed"]
